third_party/move/move-compiler-v2/tests/ability-check/v1-typing/constraints_not_satisfied_type_arguments_internal_call.exp

Diagnostics:
error: type `R` is missing required ability `copy`
  ┌─ tests/ability-check/v1-typing/constraints_not_satisfied_type_arguments_internal_call.move:9:18
  │
2 │     struct CupC<T: copy> { f: T }
  │                 - declaration of type parameter `T`
  ·
9 │         box<CupC<R>>();
  │                  ^
  │
  = required by instantiating type parameter `T:copy` of struct `CupC`
